Fixed background size bug on mobile

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -16,6 +16,7 @@
     opacity: .1;
     z-index: 2;
     background: url('../images/hero.jpg') no-repeat center center;
+    background-size: cover;
     width: calc(100% - 40px);
     height: calc(100% - 40px);
     content: '';
